--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"@types/react-helmet": "^6.1.11",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.34",
+		"lucide-react": "^0.316.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^2.0.4",
+		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.21.3",
 		"react-scripts": "5.0.1",
 		"styled-components": "^6.1.8",
